--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<title>Angular QuickStart</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="styles.css">
+	
+	<link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
+	<link href="app/assets/style.css" rel="stylesheet">
+
 	<!-- 1. Load libraries -->
 	<!-- Polyfill(s) for older browsers -->
 	<script src="node_modules/core-js/client/shim.min.js"></script>
