Routing base structure added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<base href="/">
+	
 	<title>Angular QuickStart</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +25,7 @@
 <!-- 3. Display the application -->
 
 <body>
-	<my-app>Loading...</my-app>
+	<dol-app>Loading...</dol-app>
 </body>
 
 </html>
