--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 
 <head>
 	<base href="/">
-	
+
 	<title>Data of Legends</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
-	<link href="app/assets/style.css" rel="stylesheet">
+
+	<link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+	<link rel="stylesheet" href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css">
+	<link rel="stylesheet" href="app/assets/style.css">
 
 	<!-- 1. Load libraries -->
 	<!-- Polyfill(s) for older browsers -->
@@ -19,8 +22,10 @@
 	<!-- 2. Configure SystemJS -->
 	<script src="systemjs.config.js"></script>
 	<script>
-      System.import('app').catch(function(err){ console.error(err); });
-    </script>
+    System.import('app').catch(function(err){ console.error(err); });
+	</script>
+
+	<script src="/node_modules/material-design-lite/material.min.js"></script>
 </head>
 <!-- 3. Display the application -->
 
